# weather-mail

./: .gitignore  DEPLOYMENT_CHECKLIST.md  EMAIL_SAMPLE.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  WHY_IMPRESSIVE.md  debug_email.html  debug_output.html  main.py  pyproject.toml  setup.sh  test.py
.github/workflows/: daily.yml
src/: emailer.py  history.py  visualizer.py  weather.py
templates/: email.html
